<resources>
    <string name="app_name">Despach</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_user_name">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesion</string>
    <string name="title_searchPicking">Consultar Picking</string>
    <string name="hint_nbrPicking">Ingrese Nro de ENTREGA</string>
    <string name="btn_search_picking">Buscar</string>
    <string name="title_nbrPicking">Nro. Entrega: </string>
    <string name="title_raz_social">Razón Social: </string>
    <string name="title_plate">Placa:</string>
    <string name="title_driver">Conductor:</string>
    <string name="title_license">Licencia: </string>
    <string name="title_date">Fecha:</string>
    <string name="title_hour">Hora: </string>
    <string name="title_info_picking">DATOS DEL PICKING</string>
    <string name="title_Product">Producto:</string>
    <string name="title_quantity">Cantidad:</string>
    <string name="title_weight">Peso (kg):</string>
    <string name="tv_observation">Obs:</string>
    <string name="title_type_load">T. carga:</string>
    <string name="title_ton">Ton:</string>
    <string name="title_start">Hora Ini:</string>
    <string name="title_end">Hora Fin:</string>
    <string name="title_list_material">Detalle de carga de productos</string>
    <string name="text_btn_validar">Validar</string>
    <string name="text_btn_note">Observar</string>
    <string name="text_name_stevedor">Nombre:  </string>
    <string name="text_dni_stevedor">DNI: </string>
    <string name="title_list_stevedores">Estibadores responsables</string>
    <string name="dialog_product">Producto: </string>
    <string name="hint_lot">Número de lote</string>
    <string name="start_load">Iniciar carga</string>
    <string name="end_load">Finalizar carga</string>
    <string name="reason">Motivo: </string>
    <string name="hint_reason">Observación</string>
    <string name="save">Grabar</string>
    <string name="title_controller">Controlador / Despachador responsable</string>
    <string name="title_tower_control">Torre de control</string>
    <string name="title_verify">Verificado a las: </string>
    <string name="error_ocurred_validated">!OCURRIÓ UN ERROR!</string>
    <string name="material_stevedor">Material: </string>
    <string name="requerido">*Requerido</string>
    <string name="dialog_new_stevedor">Añadir estibador a: </string>
    <string name="name_stevedor">Nombre</string>
    <string name="dni_stevedor">DNI</string>
    <string name="add_stevedor">Agregar estibador</string>
    <string name="sure_delete">¿Seguro que desea eliminar el estibador: </string>
    <string name="agree">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_edit_stevedor">Editar estibador</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_dni">DNI</string>
    <string name="btn_update">Actualizar</string>
    <string name="lbl_validate">Validado</string>
    <string name="lbl_observe">Observado</string>
    <string name="title_dialog_logout">¿Desea cerrar sesión?</string>
    <string name="btnYes">Si</string>
    <string name="btnNo">No</string>
    <string name="title_disconection">SIN CONEXIÓN A INTERNET</string>
    <string name="title_verify_conection">Verfique su conexión a internet</string>
    <string name="title_dialog_api">Inserte url del API</string>
    <string name="btnAceptarApi">Aceptar</string>
    <string name="btnCancelarApi">Cancelar</string>
    <string name="title_obs">Observación:</string>
    <string name="Hello_login">Hola,</string>
    <string name="Title_perfil">Perfil:</string>
    <string name="Title_userName">Nombre de usuario:</string>
    <string name="title_profile">Perfil</string>
    <string name="middle_dash">-</string>
    <string name="pdf">pdf</string>
    <string name="_0080287561">0080287561</string>
    <string name="api">api</string>
    <string name="hueco_15_raya_p2">HUECO 15 RAYA P2</string>

    <string name="do_you_want_to_exit_the_application">¿Desea salir de la aplicación?</string>
    <string name="scan_picking_number">Escanea un número de picking</string>
    <string name="cancelled">Cancelado</string>
    <string name="do_you_want_to_exit_picking">¿Desea salir del picking?</string>
    <string name="loading_finished">Se finalizó la carga</string>
    <string name="you_must_first_start_loading_the_material">Primero debe iniciar la carga del material</string>
    <string name="are_you_sure_you_want_to_log_out">¿Seguro que desea cerrar sesión?</string>
    <string name="you_must_enter_lot_number">Debe ingresar un número de lote</string>
    <string name="material">"Material: "</string>
    <string name="you_must_enter_reason">Debe ingresar un motivo</string>
    <string name="are_you_sure_you_want_to_look_at_the_material">¿Seguro que desea observar el material?</string>
    <string name="are_you_sure_you_want_to_look_at_the_picking">¿Seguro que desea observar el picking?</string>
    <string name="are_you_sure_you_want_to_validate_the_picking">¿Seguro que desea validar el picking?</string>
    <string name="empty" />
    <string name="error_recibir_correos">Error al recibir correos</string>
    <string name="material_observado_correctamente">Material observado correctamente</string>
    <string name="seguro_desea_cerrar_sesion">¿Seguro que desea cerrar sesión?</string>
    <string name="barra">" | "</string>

</resources>