<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="5dp"
    android:elevation="120dp"
    app:cardCornerRadius="20dp"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="23dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito_black"
            android:text="@string/title_edit_stevedor"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_rectangle"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/hint_name"
            android:textAlignment="center"
            android:textColorHint="@color/soft_gray" />

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/edtDni"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_rectangle"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/hint_dni"
            android:maxLength="8"
            android:textAlignment="center"
            android:textColorHint="@color/soft_gray" />

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="@font/nunito_black"
            android:text="@string/btn_update"
            android:textSize="15sp"
            app:cornerRadius="15dp" />


    </LinearLayout>

</androidx.cardview.widget.CardView>