<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="5dp"
    android:elevation="120dp"
    app:cardCornerRadius="20dp"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="23dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="70dp"
        android:paddingVertical="20dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/title_nbrPicking"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tvNroPicking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito_bold"
                android:text="80287561"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/tvNameProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito"
            android:text="@string/reason"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/edt_nbrLot"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/shape_rectangle"
            android:fontFamily="@font/nunito"
            android:hint="@string/hint_reason"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/soft_gray" />

        <Space
            android:layout_width="1dp"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btn_startLoad"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/orange_principal"
            android:fontFamily="@font/nunito_black"
            android:text="@string/save"
            android:textSize="15sp"
            app:cornerRadius="15dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>