<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:layout_editor_absoluteX="1dp"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="50dp"
    tools:layout_editor_absoluteY="23dp"
    app:cardCornerRadius="20dp"
    android:layout_gravity="center"
    android:elevation="120dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_product"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_bold"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"/>
        <TextView
            android:id="@+id/tvNameProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hueco 15 Raya P1"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_black"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/edt_nbrLot"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/hint_lot"
            android:textColorHint="@color/soft_gray"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_regular"
            android:textAlignment="center"
            android:background="@drawable/shape_rectangle"/>

        <Space
            android:layout_width="1dp"
            android:layout_height="20dp"/>

        <Button
            android:id="@+id/btn_startLoad"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/green"
            android:text="@string/start_load"
            app:cornerRadius="15dp"
            android:textSize="15sp"
            android:fontFamily="@font/nunito_black"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>